# wasmedge_hyper_demo

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: examples.yml
client/: Cargo.toml  README.md
client-https/: Cargo.toml
client-https/src/: main.rs
client/src/: main.rs
server/: Cargo.toml  README.md
server-axum/: Cargo.toml  README.md
server-axum/src/: main.rs
server-tflite/: Cargo.toml  README.md
server-tflite/src/: main.rs
server-warp/: Cargo.toml  README.md
server-warp/src/: main.rs
server/src/: main.rs
src/: main.rs
