[package]
name = "wasmedge_hyper_client_https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper_wasi = { version = "0.15", features = ["full"]}
http-body-util = "0.1.0-rc.2"
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
pretty_env_logger = "0.4.0"
wasmedge_rustls_api = { version = "0.1", features = [ "tokio_async" ] }
