[package]
name = "wasmedge_hyper_client_https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
pretty_env_logger = "0.4.0"

wasmedge_wasi_socket = "0.5"
pin-project = "1.1.3"
http-body-util = "0.1.0"

tokio-rustls = "0.25.0"
webpki-roots = "0.26.0"
rustls = "0.22.2"
