[package]
name = "wasmedge_hyper_client"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {git = "https://github.com/WasmEdge/hyper.git", branch = "wasmedge", features = ["full"]}
tokio = { git="https://github.com/WasmEdge/tokio.git", branch = "wasmedge", features = ["rt", "macros", "net", "time", "io-util"]}
pretty_env_logger = "0.4.0"