[package]
name = "wasmedge_hyper_server_tflite"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {git = "https://github.com/WasmEdge/hyper.git", branch = "wasmedge", features = ["http1", "server"]}
tokio = { git="https://github.com/WasmEdge/tokio.git", features = ["rt", "macros", "net", "time"]}
wasmedge_tensorflow_interface = "^0.2.0"
