[package]
name = "wasmedge_hyper_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {git = "https://github.com/WasmEdge/hyper.git", branch = "wasmedge", features = ["http1", "server"]}
tokio = { git="https://github.com/WasmEdge/tokio.git", branch = "wasmedge", features = ["rt", "macros", "net", "time"]}