[package]
name = "wasmedge_hyper_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
wasmedge_wasi_socket = "0.5"

pin-project = "1.1.3"
http-body-util = "0.1.0"
bytes = "1"
